# openvino-tutorial

./: .gitignore  README.md  pyproject.toml
notebook/: 00_check_npu.ipynb  01_compare_segmentation_speed.ipynb  02_resnet50_cpu.ipynb  02_resnet50_npu.ipynb
